test/expected/explain_typedef_ci32.out
explain typedef char int32_t
                     ^
22: error: "int32_t": type redefinition with different type; original is: typedef int int32_t
